--- a/manage-mss.html
+++ b/manage-mss.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/letters.css">
     <script src="js/deer.js" type="module"></script>
-    <script src="js/app.js" type="module"></script>
+    <!-- <script src="js/app.js" type="module"></script> -->
 </head>
 
 <body class="container">
