This spins up and can be moved through.

--- a/status/index.html
+++ b/status/index.html
@@ -3,8 +3,8 @@
     <head>
         <title>Dunbar Status Reports</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="css/status.css">
-        <link href="../../favicon.ico" rel="icon" type="image/x-icon" />
+        <link rel="stylesheet" href="/stylesheets/status.css">
+        <link href="../favicon.ico" rel="icon" type="image/x-icon" />
         <script src="https://centerfordigitalhumanities.github.io/DLA/auth.js" type="module"></script>
     </head>
     <body class="container">
@@ -14,7 +14,7 @@
             </auth-button>
             <div class="tabs">
                 <a href="./index.html">🏠 Home</a>
-                <a href="./reports/index.html">📚 View Reports </a>
+                <a href="./status/index.html">📚 View Reports </a>
                 <a href="./manage-mss.html">📚 Manage Manuscripts </a>
                 <a href="http://dunbar-users.rerum.io">📚 Manage Users </a>
                 <a href="http://dunbar-letters.rerum.io">📚 Dunbar Letters </a>
@@ -24,7 +24,7 @@
                 <img src="https://cdm16007.contentdm.oclc.org/iiif/2/p267401coll32:4553/100,0,1100,1100/150,150/0/default.jpg">
             </paul>
             <logoimg>
-                <img src="media/logo3.jpg" alt="logo">    
+                <img src="../media/logo3.jpg" alt="logo">    
             </logoimg>
         </gm-header>
         <p>You can choose to look at DLA Record Statuses or T-PEN Dunbar Project Statuses.</p>
@@ -46,7 +46,7 @@
                 </svg>
             </a>
             <a target="_blank" href="https://www.slu.edu/research/faculty-resources/research-computing.php">
-                <img class="brand" src="media/rcg-logo.jpg"> <small>©2022 Research Computing Group </small>
+                <img class="brand" src="../media/rcg-logo.jpg"> <small>©2022 Research Computing Group </small>
             </a>
         </gm-footer>
     </body>
