--- a/status/tpen-projects-status.html
+++ b/status/tpen-projects-status.html
@@ -2,13 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>Dunbar Letters Status</title>
+    <title>Dunbar T-PEN Projects Status</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/status.css">
-    <link href="../../favicon.ico" rel="icon" type="image/x-icon" />
+    <link rel="stylesheet" href="/stylesheets/status.css">
+    <link href="../favicon.ico" rel="icon" type="image/x-icon" />
     <script src="https://centerfordigitalhumanities.github.io/DLA/auth.js" type="module"></script>
     <style>
-
         .good{
             color: green;
         }
@@ -21,8 +20,15 @@
 
         }
 
-        #dla_browsable{
-            margin-top: 1em;
+        .tpenProjectStatus{
+
+        }
+
+        .tpenProjectStatusList{
+
+        }
+
+        #tpen_browsable{
             border-top: 3px solid green;
             border-left: 1px solid black;
             border-right: 1px solid black;
@@ -48,7 +54,6 @@
         .uppercase{
             text-transform: capitalize;
         }
-
         .sidebar.loading{
             background-image: url(".././images/loading.gif");
             background-color: rgba(20, 133, 79, .5);
@@ -63,7 +68,6 @@
         /*.uppercase:first-letter {
             text-transform: uppercase;
         }*/
-
     </style>
 </head>
 
@@ -88,15 +92,16 @@
         </logoimg>
     </gm-header>
     <div class="loadingProgress"> </div>
-    <div id="dla_browsable" class="container reverse">
-        <div id="DLADocuments" class="grow wrap">list loading</div>
+    <div id="tpen_browsable" class="container reverse">
+        <div id="TPENDocuments" class="grow wrap"></div>
         <div class="sidebar loading">
-            <h3>Refine Results <button role="button" id="dlaQueryReset">clear all</button></h3>
-            <progress value="107" max="107">107 of 107</progress>
-            <input id="dla_query" type="text" placeholder="type to filter">
-            <section id="dlaFacetFilter"></section>
+            <h3>Refine Results <button role="button" id="tpenQueryReset">clear all</button></h3>
+            <progress value="107" max="107"></progress>
+            <input id="tpen_query" type="text" placeholder="type to filter">
+            <section id="tpenFacetFilter"></section>
         </div>
     </div>
+
     <gm-footer>
         <a href="../index.html">🏠</a>
         <a href="../manuscripts.html">📚</a>
