--- a/status/tpen-projects-status.html
+++ b/status/tpen-projects-status.html
@@ -55,7 +55,7 @@
             text-transform: capitalize;
         }
         .sidebar.loading{
-            background-image: url(".././images/loading.gif");
+            background-image: url("/media/loading.gif");
             background-color: rgba(20, 133, 79, .5);
         }
         .loadingProgress{
@@ -88,7 +88,7 @@
             <img src="https://cdm16007.contentdm.oclc.org/iiif/2/p267401coll32:4553/100,0,1100,1100/150,150/0/default.jpg">
         </paul>
         <logoimg>
-            <img src="media/logo3.jpg" alt="logo">    
+            <img src="/media/logo3.jpg" alt="logo">    
         </logoimg>
     </gm-header>
     <div class="loadingProgress"> </div>
@@ -115,10 +115,10 @@
             </svg>
         </a>
         <a target="_blank" href="https://www.slu.edu/research/faculty-resources/research-computing.php">
-            <img class="brand" src="media/rcg-logo.jpg"> <small>©2022 Research Computing Group </small>
+            <img class="brand" src="/media/rcg-logo.jpg"> <small>©2022 Research Computing Group </small>
         </a>
     </gm-footer>
-    <script src="js/status.js" type="module"></script>
+    <script src="./js/status.js" type="module"></script>
     <script>
         document.addEventListener('all-information-success', event => {
               
