move js around and correct links to js files

--- a/status/tpen-projects-status.html
+++ b/status/tpen-projects-status.html
@@ -118,7 +118,7 @@
             <img class="brand" src="/media/rcg-logo.jpg"> <small>©2022 Research Computing Group </small>
         </a>
     </gm-footer>
-    <script src="./js/status.js" type="module"></script>
+    <script src="/js/status.js" type="module"></script>
     <script>
         document.addEventListener('all-information-success', event => {
               
