--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             </auth-button>
             <div class="tabs">
                 <a href="./index.html">🏠 Home</a>
-                <a href="./reports/index.html">📚 View Reports </a>
+                <a href="./status/index.html">📚 View Reports </a>
                 <a href="./manage-mss.html">📚 Manage Manuscripts </a>
                 <a href="http://dunbar-users.rerum.io">📚 Manage Users </a>
                 <a href="http://dunbar-letters.rerum.io">📚 Dunbar Letters </a>
@@ -30,7 +30,7 @@
             Here you will be able to <a href="./reports/index.html">run reports</a> and <a href="./manage-mss.html">manage public data</a>.
         </p>
         <div class="welcomeLinks">
-            <a href="./reports/index.html">📚 View Report Options</a>
+            <a href="./status/index.html">📚 View Report Options</a>
             <a href="./manage-mss.html">📚 View Public Records</a>
         </div>
         <gm-footer>
