--- a/management/index.html
+++ b/management/index.html
@@ -1,8 +1,22 @@
 <html lang="en">
-    <head>
-        <title>Collection Control—Dunbar Library & Archive</title>
-    </head>
-    <body>
-        manage
-    </body>
+
+<head>
+    <title>Collection Control—Dunbar Library & Archive</title>
+    <script src="https://centerfordigitalhumanities.github.io/DLA/auth.js" type="module"></script>
+</head>
+
+<body>
+    <auth-button class="container">
+        <button is="auth-button">login</button>
+    </auth-button>
+    <div id="collections">
+        <button class="collections">collection</button>
+    </div>
+    <div id="records">
+        <ul>
+            <li class="record">record</li>
+        </ul>
+    </div>
+</body>
+
 </html>
