--- a/status/dla-records-status.html
+++ b/status/dla-records-status.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/stylesheets/status.css">
     <link href="../favicon.ico" rel="icon" type="image/x-icon" />
     <script src="https://centerfordigitalhumanities.github.io/DLA/auth.js" type="module"></script>
+    <script src="/js/status.js" type="module"></script>
+    <script src="/js/deer.js" type="module"></script>
     <style>
 
         .good{
@@ -113,7 +115,6 @@
             <img class="brand" src="/media/rcg-logo.jpg"> <small>©2022 Research Computing Group </small>
         </a>
     </gm-footer>
-    <script src="/js/status.js" type="module"></script>
     <script>
         document.addEventListener('all-information-success', event => {
               
