--- a/status/tpen-projects-status.html
+++ b/status/tpen-projects-status.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/stylesheets/status.css">
     <link href="../favicon.ico" rel="icon" type="image/x-icon" />
     <script src="https://centerfordigitalhumanities.github.io/DLA/auth.js" type="module"></script>
+    <script src="/js/status.js" type="module"></script>
+    <script src="/js/deer.js" type="module"></script>
     <style>
         .good{
             color: green;
