local scripts, turn off tests

--- a/management/index.html
+++ b/management/index.html
@@ -1,21 +1,21 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <title>Collection Control—Dunbar Library & Archive</title>
     <script src="https://centerfordigitalhumanities.github.io/DLA/auth.js" type="module"></script>
+    <script src="/manage/script" type="module"></script>
 </head>
 
 <body>
     <auth-button class="container">
-        <button is="auth-button">login</button>
+        <button is="auth-button" disabled>login</button>
     </auth-button>
     <div id="collections">
-        <button class="collections">collection</button>
+        <!-- <button class="collections" data-uri="http:">collection</button> -->
     </div>
     <div id="records">
-        <ul>
-            <li class="record">record</li>
-        </ul>
+
     </div>
 </body>
 
