--- a/status/index.html
+++ b/status/index.html
@@ -21,9 +21,9 @@
         </gm-header>
         <p>You can choose to look at DLA Record Statuses or T-PEN Dunbar Project Statuses.</p>
         <div id="linksOut">
-            <a href="./dla-records">View DLA Record Statuses</a>
+            <a href="./dlaRecords">View DLA Record Statuses</a>
             <br><br>
-            <a href="./tpen-projects">View T-PEN Project Statuses</a>
+            <a href="./tpenProjects">View T-PEN Project Statuses</a>
         </div>
     </body>
 </html>
