--- a/status/tpen-projects-status.html
+++ b/status/tpen-projects-status.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dunbar T-PEN Projects Status</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/stylesheets/status.css">
+    <link rel="stylesheet" href="/status/css">
     <link href="../favicon.ico" rel="icon" type="image/x-icon" />
     <script src="https://centerfordigitalhumanities.github.io/DLA/auth.js" type="module"></script>
     <script src="/status/js" type="module"></script>
