routing for scripts

--- a/status/index.html
+++ b/status/index.html
@@ -14,16 +14,16 @@
             </auth-button>
             <div class="tabs">
                 <a href="./">🏠 Home</a>
-                <a href="./status">📚 View Reports </a>
-                <a href="./manage">📚 Manage Collections </a>
+                <a href="/status">📚 View Reports </a>
+                <a href="/manage">📚 Manage Collections </a>
                 <a href="http://dunbar-users.rerum.io">📚 Manage Users </a>
             </div>
         </gm-header>
         <p>You can choose to look at DLA Record Statuses or T-PEN Dunbar Project Statuses.</p>
         <div id="linksOut">
-            <a href="./dlaRecords">View DLA Record Statuses</a>
+            <a href="/status/dlaRecords">View DLA Record Statuses</a>
             <br><br>
-            <a href="./tpenProjects">View T-PEN Project Statuses</a>
+            <a href="/status/tpenProjects">View T-PEN Project Statuses</a>
         </div>
     </body>
 </html>
