--- a/status/dla-records-status.html
+++ b/status/dla-records-status.html
@@ -75,9 +75,9 @@
             <button is="auth-button" disabled>login</button>    
         </auth-button>
         <div class="tabs">
-            <a href="./">🏠 Home</a>
-            <a href="./status">📚 View Reports </a>
-            <a href="./manage">📚 Manage Manuscripts </a>
+            <a href="/">🏠 Home</a>
+            <a href="/status">📚 View Reports </a>
+            <a href="/manage">📚 Manage Manuscripts </a>
             <a href="http://dunbar-users.rerum.io">📚 Manage Users </a>
         </div>
     </gm-header>
