--- a/status/tpen-projects-status.html
+++ b/status/tpen-projects-status.html
@@ -80,8 +80,8 @@
         </auth-button>
         <div class="tabs">
             <a href="./">🏠 Home</a>
-            <a href="./status">📚 View Reports </a>
-            <a href="./manage">📚 Manage Manuscripts </a>
+            <a href="/status">📚 View Reports </a>
+            <a href="/manage">📚 Manage Manuscripts </a>
             <a href="http://dunbar-users.rerum.io">📚 Manage Users </a>
         </div>
     </gm-header>
