--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,6 @@
         <meta charset="utf-8">
         <title>Dunbar Library and Archive</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/stylesheets/normalize.css">
-        <link rel="stylesheet" href="/stylesheets/main.css">
-        <link rel="stylesheet" href="/stylesheets/style.css">
-        <meta name="theme-color" content="#fafafa">
     </head>
     <body class="container">
         <gm-header>
@@ -15,28 +11,21 @@
                 <button is="auth-button" disabled>login</button>    
             </auth-button>
             <div class="tabs">
-                <a href="./index.html">🏠 Home</a>
-                <a href="./reports/index.html">📚 View Reports </a>
-                <a href="./manage-mss.html">📚 Manage Manuscripts </a>
+                <a href="/">🏠 Home</a>
+                <a href="/status">📚 View Reports </a>
+                <a href="/manage">📚 Manage Manuscripts </a>
                 <a href="http://dunbar-users.rerum.io">📚 Manage Users </a>
-                <a href="http://dunbar-letters.rerum.io">📚 Dunbar Letters </a>
-                <a href="http://dunbar-letters.rerum.io">📚 Dunbar Poems </a>
             </div>
         </gm-header>
         <p class="welcomeMessage">
             Welcome to the Dunbar Content Management System.
             <a href="http://dunbar-users.rerum.io/login.html" target="_blank">Sign up first!</a><br><br>
 
-            Here you will be able to <a href="./reports/index.html">run reports</a> and <a href="./manage-mss.html">manage public data</a>.
+            Here you will be able to <a href="/status">run reports</a> and <a href="/manage">manage public data</a>.
         </p>
         <div class="welcomeLinks">
-            <a href="./reports/index.html">📚 View Report Options</a>
-            <a href="./manage-mss.html">📚 View Public Records</a>
+            <a href="/status">📚 View Report Options</a>
+            <a href="/manage">📚 View Public Records</a>
         </div>
-        <gm-footer>
-            <a target="_blank" href="https://www.slu.edu/research/faculty-resources/research-computing.php">
-                <img class="brand" src="media/rcg-logo.jpg"> <small>©2022 Research Computing Group </small>
-            </a>
-        </gm-footer>
     </body>
 </html>
