--- a/status/dla-records-status.html
+++ b/status/dla-records-status.html
@@ -4,10 +4,10 @@
 <head>
     <title>Dunbar Letters Status</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/stylesheets/status.css">
+    <link rel="stylesheet" href="/status/css">
     <link href="../favicon.ico" rel="icon" type="image/x-icon" />
     <script src="https://centerfordigitalhumanities.github.io/DLA/auth.js" type="module"></script>
-    <script src="/js/status.js" type="module"></script>
+    <script src="/status/js" type="module"></script>
     <script src="/js/deer.js" type="module"></script>
     <style>
 
@@ -75,19 +75,11 @@
             <button is="auth-button" disabled>login</button>    
         </auth-button>
         <div class="tabs">
-            <a href="./index.html">🏠 Home</a>
-            <a href="./reports/index.html">📚 View Reports </a>
-            <a href="./manage-mss.html">📚 Manage Manuscripts </a>
+            <a href="/">🏠 Home</a>
+            <a href="/status">📚 View Reports </a>
+            <a href="/manage">📚 Manage Manuscripts </a>
             <a href="http://dunbar-users.rerum.io">📚 Manage Users </a>
-            <a href="http://dunbar-letters.rerum.io">📚 Dunbar Letters </a>
-            <a href="http://dunbar-letters.rerum.io">📚 Dunbar Poems </a>
         </div>
-        <paul>
-            <img src="https://cdm16007.contentdm.oclc.org/iiif/2/p267401coll32:4553/100,0,1100,1100/150,150/0/default.jpg">
-        </paul>
-        <logoimg>
-            <img src="/media/logo3.jpg" alt="logo">    
-        </logoimg>
     </gm-header>
     <div class="loadingProgress"> </div>
     <div id="dla_browsable" class="container reverse">
@@ -99,22 +91,6 @@
             <section id="dlaFacetFilter"></section>
         </div>
     </div>
-    <gm-footer>
-        <a href="../index.html">🏠</a>
-        <a href="../manuscripts.html">📚</a>
-        <a rel="noopener noreferrer" title="View on GitHub" href="https://github.com/CenterForDigitalHumanities/dunbar-letters"
-            target="_blank">
-            <svg height="16" class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="16"
-                aria-hidden="true">
-                <path fill-rule="evenodd"
-                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
-                </path>
-            </svg>
-        </a>
-        <a target="_blank" href="https://www.slu.edu/research/faculty-resources/research-computing.php">
-            <img class="brand" src="/media/rcg-logo.jpg"> <small>©2022 Research Computing Group </small>
-        </a>
-    </gm-footer>
     <script>
         document.addEventListener('all-information-success', event => {
               
