Changes from playing around.  Mock the bry-dun user, implement redirect for users w/o permission

--- a/public/index.html
+++ b/public/index.html
@@ -18,14 +18,11 @@
             </div>
         </gm-header>
         <p class="welcomeMessage">
-            Welcome to the Dunbar Content Management System.
-            <a href="http://dunbar-users.rerum.io/login.html" target="_blank">Sign up first!</a><br><br>
-
-            Here you will be able to <a href="/status">run reports</a> and <a href="/manage">manage public data</a>.
+            Welcome to the Dunbar Content Management System.  You must be a Dunbar Apps Content Reviewer or Dunbar Apps Administrator to access the resources listed below.
         </p>
         <div class="welcomeLinks">
-            <a href="/status">📚 View Report Options</a>
-            <a href="/manage">📚 View Public Records</a>
+            <a href="/status">📚 Review DLA Record Data Contributions</a>
+            <a href="/manage">📚 Make DLA Collection Data Public or Not Public</a>
         </div>
     </body>
 </html>
