Scratch pad level stuff

--- a/status/search.html
+++ b/status/search.html
@@ -36,16 +36,16 @@
         </p>
         <div class="">
             <select>
-                <option value="Correspondence between Paul Laurence Dunbar and Alice Moore Dunbar"> Correspondence between Paul Laurence Dunbar and Alice Moore Dunbar </option>
-                <option value="Other Correspondence"> Other Correspondence </option>
-                <option value="DLA Poems Collection"> DLA Poems Collection </option>
-                <option value="Performances linked in eCommons"> Performances linked in eCommons </option>
-                <option value="Music linked in eCommons"> Music linked in eCommons </option>
-                <option value="Dialect records from eCommons"> Dialect records from eCommons </option>
-                <option value="Dunbar namesake schools"> Dunbar namesake schools </option>
-                <option value="Dunbar namesake Monuments, parks, and landmarks"> Dunbar namesake Monuments, parks, and landmarks </option>
-                <option value="OHC Linked Records"> OHC Linked Records </option>
-                <option value="New Digitization in eCommons"> New Digitization in eCommons</option>
+                <option value="letters"> Correspondence between Paul Laurence Dunbar and Alice Moore Dunbar </option>
+                <option value="other_correspondence"> Other Correspondence </option>
+                <option value="poems"> DLA Poems Collection </option>
+                <option value="performances"> Performances linked in eCommons </option>
+                <option value="music"> Music linked in eCommons </option>
+                <option value="dialect"> Dialect records from eCommons </option>
+                <option value="namesake_schools"> Dunbar namesake schools </option>
+                <option value="namesake_other"> Dunbar namesake Monuments, parks, and landmarks </option>
+                <option value="ohc_linked_records"> OHC Linked Records </option>
+                <option value="new_in_ecommons"> New Digitization in eCommons</option>
             </select>
         </div>
         <p> 
