--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <body class="container">
         <gm-header>
             <auth-button class="container">
-                <button is="auth-button" disabled>login</button>    
+                <button is="auth-button">login</button>    
             </auth-button>
             <div class="tabs">
                 <a href="/">🏠 Home</a>
