--- a/management/index.html
+++ b/management/index.html
@@ -5,28 +5,7 @@
     <title>Collection Control—Dunbar Library & Archive</title>
     <script src="https://centerfordigitalhumanities.github.io/DLA/auth.js" type="module"></script>
     <script src="/manage/script" type="module"></script>
-    <style>
-        #collections {
-
-        }
-        #collections button {
-            padding: 1.68em;
-            height: 4em;
-            width: clamp(30vw, 6em, 50vw);
-            display: inline-block;
-            margin:0.32em;
-        }
-        #records {
-            width:100%;
-            text-align: center;
-            font-size: larger;
-            padding: 2em;
-            color: #530268;
-        }
-        #records::after{
-            content: " public records"
-        }
-    </style>
+    <link rel="stylesheet" href="/manage/css">
 </head>
 
 <body>
