--- a/management/index.html
+++ b/management/index.html
@@ -19,11 +19,18 @@
         </p>
         <!-- <button class="collections" data-uri="http:">collection</button> -->
     </div>
-    <div id="records">
-        0
-    </div>
-    <div id="queue">
-
+    <div id="resultsGrid">
+        <div id="records">
+            0
+        </div>
+        <div id="queue">
+    
+        </div>
+        <div id="actions">
+            <button role="button">Approve for Publication</button>
+            <button role="button">Return for Changes</button>
+        </div>
+        <div id="preview"> [ preview ]</div>
     </div>
 </body>
 
