record detail rendered

--- a/management/index.html
+++ b/management/index.html
@@ -6,6 +6,7 @@
     <script src="https://centerfordigitalhumanities.github.io/DLA/auth.js" type="module"></script>
     <script src="/manage/script" type="module"></script>
     <link rel="stylesheet" href="/manage/css">
+    <script src="/js/deer.js" type="module"></script>
 </head>
 
 <body>
@@ -30,7 +31,7 @@
             <button role="button">Approve for Publication</button>
             <button role="button">Return for Changes</button>
         </div>
-        <div id="preview"> [ preview ]</div>
+        <deer-view id="preview"> [ preview ]</deer-view>
     </div>
 </body>
 
