--- a/management/index.html
+++ b/management/index.html
@@ -28,8 +28,8 @@
     
         </div>
         <div id="actions">
-            <button role="button">Approve for Publication</button>
-            <button role="button">Return for Changes</button>
+            <button role="button" id="approveBtn">Approve for Publication</button>
+            <button role="button" id="returnBtn">Return for Changes</button>
         </div>
         <deer-view id="preview"> [ preview ]</deer-view>
     </div>
