--- a/public/index.html
+++ b/public/index.html
@@ -11,21 +11,19 @@
                 <button is="auth-button">login</button>    
             </auth-button>
             <div class="tabs">
-                <a href="/">🏠 Home</a>
+                <!-- <a href="/">🏠 Home</a>
                 <a href="/status">📚 View Reports </a>
                 <a href="/manage">📚 Manage Manuscripts </a>
-                <a href="http://dunbar-users.rerum.io">📚 Manage Users </a>
+                <a href="http://dunbar-users.rerum.io">📚 Manage Users </a> -->
             </div>
         </gm-header>
         <p class="welcomeMessage">
             Welcome to the Dunbar Content Management System.
-            <a href="http://dunbar-users.rerum.io/login.html" target="_blank">Sign up first!</a><br><br>
-
-            Here you will be able to <a href="/status">run reports</a> and <a href="/manage">manage public data</a>.
+            <a href="/manage">Check your queue ▶</a>.
         </p>
         <div class="welcomeLinks">
-            <a href="/status">📚 View Report Options</a>
-            <a href="/manage">📚 View Public Records</a>
+            <!-- <a href="/status">📚 View Report Options</a>
+            <a href="/manage">📚 View Public Records</a> -->
         </div>
     </body>
 </html>
