--- a/management/index.html
+++ b/management/index.html
@@ -28,8 +28,11 @@
     
         </div>
         <div id="actions">
-            <button role="button" id="approveBtn">Approve for Publication</button>
-            <button role="button" id="returnBtn">Return for Changes</button>
+            <div class="btn-group">
+                <button role="button" id="approveBtn">Approve for Publication</button>
+                <button role="button" id="returnBtn">Return for Changes</button>
+            </div>
+            <span class="message"></span>
         </div>
         <deer-view id="preview"> [ preview ]</deer-view>
     </div>
