--- a/management/index.html
+++ b/management/index.html
@@ -18,7 +18,7 @@
         <p>
             Select a Collection below to see a queue of Records to review.
         </p>
-        <!-- <button class="collections" data-uri="http:">collection</button> -->
+        <!-- <button class="collections" data-uri="https:">collection</button> -->
     </div>
     <div id="resultsGrid">
         <div id="records">
