https correction and multiquery

--- a/status/index.html
+++ b/status/index.html
@@ -16,7 +16,7 @@
                 <a href="./">🏠 Home</a>
                 <a href="/status">📚 View Reports </a>
                 <a href="/manage">📚 Manage Collections </a>
-                <a href="http://dunbar-users.rerum.io">📚 Manage Users </a>
+                <a href="//dunbar-users.rerum.io">📚 Manage Users </a>
             </div>
         </gm-header>
         <p>You can choose to look at DLA Record Statuses or T-PEN Dunbar Project Statuses.</p>
