--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
                 <!-- <a href="/">🏠 Home</a>
                 <a href="/status">📚 View Reports </a>
                 <a href="/manage">📚 Manage Manuscripts </a>
-                <a href="http://dunbar-users.rerum.io">📚 Manage Users </a> -->
+                <a href="https://dunbar-users.rerum.io">📚 Manage Users </a> -->
             </div>
         </gm-header>
         <p class="welcomeMessage">
