More UI massaging

--- a/management/index.html
+++ b/management/index.html
@@ -20,7 +20,7 @@
         </p>
         <!-- <button class="collections" data-uri="https:">collection</button> -->
     </div>
-    <div class="commentArea">
+    <div id="commentArea">
         <div id="commentToggle"> </div>
         <div id="commentText" class="statusDrawer text-dark is-hidden">           
             
