Changes from full workflow test.  Let's run another one.

--- a/management/index.html
+++ b/management/index.html
@@ -22,7 +22,7 @@
     </div>
     <div id="commentArea">
         <div id="commentToggle"> </div>
-        <div id="commentText" class="statusDrawer text-dark is-hidden">           
+        <div id="commentText">           
             
         </div>
     </div>
@@ -40,6 +40,7 @@
             <div class="btn-group">
                 <button role="button" id="approveBtn">Approve for Publication</button>
                 <button role="button" id="returnBtn">Return for Changes</button>
+                <button role="button" id="deleteBtn">Drop From Collection</button>
             </div>
         </div>
         <deer-view id="preview"> [ preview ]</deer-view>
