--- a/management/index.html
+++ b/management/index.html
@@ -20,7 +20,7 @@
         </p>
         <!-- <button class="collections" data-uri="https:">collection</button> -->
     </div>
-    <div id="commentArea">
+    <div class="is-hidden" id="commentArea">
         <div id="commentToggle"> </div>
         <div id="commentText">           
             
@@ -40,7 +40,7 @@
             <div class="btn-group">
                 <button role="button" id="approveBtn">Approve for Publication</button>
                 <button role="button" id="returnBtn">Return for Changes</button>
-                <button role="button" id="deleteBtn">Drop From Collection</button>
+                <button class="is-hidden" role="button" id="deleteBtn">Drop From Collection</button>
             </div>
         </div>
         <deer-view id="preview"> [ preview ]</deer-view>
