Full CMS Workflow (#44)
* Some sanity and base logic needed for the curators to see the most important thing

* There we go.  Curators see the most important thing now.

* successfully detect comment and get the author

* Content-Type header update to fix special chars so they can be processed and fetch()s stop erroring out.

* Changes that allow a reviewer to pass up to curators.

* Pass that text along

* New comment and feedback areas.  Curators can delete records.

* Give curators the option to view the published list and the managed list.  Let UI queues guide what is on screen.

* Reviewers should not see records they have suggested for publication.

* This feels like a real CMS

* Delete button look and feel

* More UI massaging

* Working much better.  Needs another end to end test, and is likely to need final touches.  End of day.

* Code documentation, simplification, and cleanup.  Let's do a full flow test.

* Changes from full workflow test.  Let's run another one.

* changes from testing

* End of day

* cleanup and stuff, almost ready

* Route '/' to '/manage'

* confirms for approval actions

* try to fix cd

* try to fix cd

* alright let's try to cd to the right place

* Let's merge this in

--- a/management/index.html
+++ b/management/index.html
@@ -20,6 +20,14 @@
         </p>
         <!-- <button class="collections" data-uri="https:">collection</button> -->
     </div>
+    <div class="is-hidden" id="commentArea">
+        <div id="commentToggle"> </div>
+        <div id="commentText">           
+            
+        </div>
+    </div>
+    <!-- Feedback from actions.  They will show for a few seconds then go away.  -->
+    <p id="feedback"> Feedback Will Appear Here </p>
     <div id="resultsGrid">
         <div id="records">
             0
@@ -28,11 +36,12 @@
     
         </div>
         <div id="actions">
+            <div id="selectedRecordTitle"> </div>
             <div class="btn-group">
                 <button role="button" id="approveBtn">Approve for Publication</button>
                 <button role="button" id="returnBtn">Return for Changes</button>
+                <button class="is-hidden" role="button" id="deleteBtn">Drop From Collection</button>
             </div>
-            <span class="message"></span>
         </div>
         <deer-view id="preview"> [ preview ]</deer-view>
     </div>
